[package]
name = "simplified-btc-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
rand = "0.8.5"
sha2 = "0.10.6"
rust-crypto = "^0.2"
failure = "0.1"
clap = "4.0.29"
bitcoincash-addr = "0.5.2"
merkle-cbt = "0.3.2"
sled = "0.34"
